Update song menu theme

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= i
 SONG_MENU_NAME_MAIN=Menú de cançons
 SONG_MENU_PLAY=Cantar
 SONG_MENU_CHANGEPLAYERS=Canviar jugadors
-SONG_MENU_CANCEL=Cancel·lar
 
 SONG_MENU_NAME_PLAYLIST=Menú de cançons
 SONG_MENU_PLAYLIST_ADD=Afegir Cançó
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=No es pot carregar: No s'han trobat línies
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=No es pot carregar: Error llegint línia %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Jugador %d s'assigna a diversos micròfons. Comproveu les opcions del micròfon.
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Jugador %d no està assignat a un micròfon. Comproveu les opcions del micròfon.
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
