--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= und
 SONG_MENU_NAME_MAIN=Menü
 SONG_MENU_PLAY=Singen
 SONG_MENU_CHANGEPLAYERS=Spieler wechseln
-SONG_MENU_CANCEL=Abbrechen
 
 SONG_MENU_NAME_PLAYLIST=Menü
 SONG_MENU_PLAYLIST_ADD=Song hinzufügen
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Song konnte nicht geladen werden: Es wurden keine S
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song konnte nicht geladen werden: Fehler beim Einlesen der Zeile %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Mehrere Mikrofone für Spieler %d gewählt.\nÜberprüfen Sie Ihre Mikrofonoptionen.
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Kein Mikrofon für Spieler %d gewählt.\nÜberprüfen Sie Ihre Mikrofonoptionen.
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
