--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= and
 SONG_MENU_NAME_MAIN=Song menu
 SONG_MENU_PLAY=Sing
 SONG_MENU_CHANGEPLAYERS=Change Players
-SONG_MENU_CANCEL=Cancel
 
 SONG_MENU_NAME_PLAYLIST=Song Menu
 SONG_MENU_PLAYLIST_ADD=Add Song
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Song could not be loaded: Can''t find any linebreak
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song could not be loaded: Error parsing line %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Player %d is assigned to multiple microphones. Please check your microphone options
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphone. Please check your microphone options
+
+;COMMON TRANSLATIONS:
+C_BACK=Back
