--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= y
 SONG_MENU_NAME_MAIN=Menú canciones
 SONG_MENU_PLAY=Cantar esta canción
 SONG_MENU_CHANGEPLAYERS=Elegir jugadores
-SONG_MENU_CANCEL=Cancelar
 
 SONG_MENU_NAME_PLAYLIST=Menú canciones
 SONG_MENU_PLAYLIST_ADD=Agregar canción
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Imposible cargar la canción: No se encuentran inte
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Imposible cargar la canción: Error durante el parsing de la línea %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Se han asignado más de 1 micrófono al jugador %d. Comprueba las opciones de micrófonos.
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Al jugador %d no se le ha asignado ningún micrófono. Comprueba las opciones de micrófonos
+
+;COMMON TRANSLATIONS:
+C_BACK=Atrás
