--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= eta
 SONG_MENU_NAME_MAIN=Menua
 SONG_MENU_PLAY=Abestu
 SONG_MENU_CHANGEPLAYERS=Jokalariak aukeratu
-SONG_MENU_CANCEL=Itzuli
 
 SONG_MENU_NAME_PLAYLIST=Menua
 SONG_MENU_PLAYLIST_ADD=Zerrendara gehitu
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Ezin da abestia kargatu: Ez daude lerro jauziak
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Ezin da abestia kargatu: Okerra %0:d lerroan
 ERROR_PLAYER_DEVICE_ASSIGNMENT= %d.jokalariak mikrofono bat baino gehiago aukeratuta ditu . Egiaztatu mikrofonoaren aukerak
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphones. Egiaztatu mikrofonoaren aukerak
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
