--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= et
 SONG_MENU_NAME_MAIN=Menu
 SONG_MENU_PLAY=Chanter
 SONG_MENU_CHANGEPLAYERS=Changer de joueurs
-SONG_MENU_CANCEL=Annuler
 
 SONG_MENU_NAME_PLAYLIST=Menu
 SONG_MENU_PLAYLIST_ADD=Ajouter la chanson
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Chargement impossible : Saut de ligne introuvable
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Chargement impossible : Erreur analyseur à la ligne %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Plusieurs micros sont attribués au joueur %d. Merci de vérifier vos options de microphone
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Aucun micro n'est attribué au joueur %d. Merci de vérifier vos options de microphone
+
+;COMMON TRANSLATIONS:
+C_BACK=Avant
