--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2=’s
 SONG_MENU_NAME_MAIN=Clàr-taice an òrain
 SONG_MENU_PLAY=Seinn
 SONG_MENU_CHANGEPLAYERS=Cluicheadairean eile
-SONG_MENU_CANCEL=Sguir dheth
 
 SONG_MENU_NAME_PLAYLIST=Clàr-taice
 SONG_MENU_PLAYLIST_ADD=Cuir òran ris
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Cha b’ urrainn dhuinn an t-òran a luchdadh: Cha 
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Cha b’ urrainn dhuinn an t-òran a luchdadh: Mearachd e parsadh na loidhne %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Chaidh iomadh micreofon a shònrachadh dha chluicheadair %d. Thoir sùil air na roghainnean microfòn agad
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Cha deach micreofon a shònrachadh dha chluicheadair %d. Thoir sùil air na roghainnean microfòn agad
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
