--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= i
 SONG_MENU_NAME_MAIN=Kolekcija pjesama
 SONG_MENU_PLAY=Pjevaj
 SONG_MENU_CHANGEPLAYERS=Promijeni igrače
-SONG_MENU_CANCEL=Poništi
 
 SONG_MENU_NAME_PLAYLIST=Playliste
 SONG_MENU_PLAYLIST_ADD=Dodaj Pjesmu
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Pjesma se ne može učitati: Nije nađen niti jedan
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Pjesma se ne može učitati: Greška u obradi linije %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Igrač %d je dodijeljen više mikrofona. Provjerite opcije mikrofona
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Igrač %d nije dodijeljen mikrofonu. Provjerite opcije mikrofona
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
