--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= e
 SONG_MENU_NAME_MAIN=Menu canzone
 SONG_MENU_PLAY=Canta
 SONG_MENU_CHANGEPLAYERS=Cambia giocatori
-SONG_MENU_CANCEL=Annulla
 
 SONG_MENU_NAME_PLAYLIST=Menu Canzone
 SONG_MENU_PLAYLIST_ADD=Aggiungi Canzone
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Impossibile aprire la canzone: nessuna pausa trovat
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Impossibile aprire la canzone: errore durante l'interpretazione della linea %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Il giocatore %d è assegnato a più microfoni. Per favore, selezionare un canale libero!
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Il giocatore %d non è assegnato ad un microfono. Per favore, selezionare un canale nelle opzioni del microfono.
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
