--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= ir
 SONG_MENU_NAME_MAIN=Dainų meniu
 SONG_MENU_PLAY=Dainuoti
 SONG_MENU_CHANGEPLAYERS=Keisti žaidėjus
-SONG_MENU_CANCEL=Atšaukti
 
 SONG_MENU_NAME_PLAYLIST=Dainų meniu
 SONG_MENU_PLAYLIST_ADD=Pridėti dainą
@@ -610,3 +609,6 @@ ERROR_LOADING_SONGS=Wait for loading all the songs
 ;TODO: ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song could not be loaded: Error parsing line %0:d
 ;TODO: ERROR_PLAYER_DEVICE_ASSIGNMENT=Player %d is assigned to multiple microphones. Please check your microphone options
 ;TODO: ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphone. Please check your microphone options
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
