--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= an
 SONG_MENU_NAME_MAIN=Menü
 SONG_MENU_PLAY=Sangen
 SONG_MENU_CHANGEPLAYERS=Spiller tauschen
-SONG_MENU_CANCEL=Offbriechen
 
 SONG_MENU_NAME_PLAYLIST=Menü
 SONG_MENU_PLAYLIST_ADD=Lidd bäifügen
@@ -610,3 +609,7 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Lidd gëtt net gelueden: Et goufe keng Saazwiessel 
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Lidd gëtt net gelueden: Feeler beim Parze vun der Zeil %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=De Spiller %d huet ze vill Mikroe gewielt. Iwwerpréift d'Opzeechnungsoptiounen.
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=De Spiller %d huet kee Mikro gewielt. Iwwerpréift d'Opzeechnungsoptiounen.
+
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
