--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= és
 SONG_MENU_NAME_MAIN=Dal menü
 SONG_MENU_PLAY=Szám
 SONG_MENU_CHANGEPLAYERS=Játékos váltás
-SONG_MENU_CANCEL=Mégsem
 
 SONG_MENU_NAME_PLAYLIST=Szám Menü
 SONG_MENU_PLAYLIST_ADD=Hozzáad
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Sikertelen dalbetöltés: Nincs benne sortörés
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Sikertelen dalbetöltés: Sikertelen elemzési sor %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Játékos %d több mikrofonhoz van rendelve. Kérlek ellenőrizd a mikrofon beállításokat.
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Játékos %d nincs egy mikrofonhoz sem rendelve. Kérlek ellenőrizd a mikrofon beállításokat.
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
