--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= en
 SONG_MENU_NAME_MAIN=Liedjes Menu
 SONG_MENU_PLAY=Zingen
 SONG_MENU_CHANGEPLAYERS=Verander de spelers
-SONG_MENU_CANCEL=Cancel
 
 SONG_MENU_NAME_PLAYLIST=Liedjes Menu
 SONG_MENU_PLAYLIST_ADD=Voeg een liedje toe
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Liedje kon niet geladen worden: Geen linebreaks gev
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Liedje kon niet geladen worden: Probleem met regel %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Speler %d is toegewezen aan meerdere microfoons. Controleer uw microfoonopties
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Speler %d is niet toegewezen aan een microfoon. Controleer uw microfoonopties
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
