--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= og
 SONG_MENU_NAME_MAIN=Sangmeny
 SONG_MENU_PLAY=Syng
 SONG_MENU_CHANGEPLAYERS=Endre spillere
-SONG_MENU_CANCEL=AVbryt
 
 SONG_MENU_NAME_PLAYLIST=Sangmeny
 SONG_MENU_PLAYLIST_ADD=Legg til sang
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG=Sangen kunne ikke lastes
 ;TODO: ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song could not be loaded: Error parsing line %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Spiller %d er tilordnet flere mikrofoner. Vennligst sjekk mikrofonene dine
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Spiller %d er ikke tilordnet en mikrofon. Vennligst sjekk mikrofonene dine
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
