--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= oraz
 SONG_MENU_NAME_MAIN=Menu piosenki
 SONG_MENU_PLAY=Śpiewaj
 SONG_MENU_CHANGEPLAYERS=Zmień graczy
-SONG_MENU_CANCEL=Anuluj
 
 SONG_MENU_NAME_PLAYLIST=Menu piosenki
 SONG_MENU_PLAYLIST_ADD=Dodaj piosenkę
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Piosenka nie może być załadowana: nie mogę znal
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Piosenka nie może być załadowana: Błąd rozpoznawania linii %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Gracz %d został przypisany do wielu mikrofonów. Sprawdź ustawienia mikrofonów.
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Gracz %d nie ma przypisanego mikrofonu. Sprawdź ustawienia mikrofonów.
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
