--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= e
 SONG_MENU_NAME_MAIN=Menu de canções
 SONG_MENU_PLAY=Cantar
 SONG_MENU_CHANGEPLAYERS=Mudar Jogadores
-SONG_MENU_CANCEL=Cancelar
 
 SONG_MENU_NAME_PLAYLIST=Menu de Canções
 SONG_MENU_PLAYLIST_ADD=Adicionar Canção
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=A canção não tem quebras de linha!
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Erro durante o parsing da linha %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=O Jogador %d está atribuído a vários microfones. Por favor verifique as opções de microfone!
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=O Jogador %d não está atribuído a nenhum microfone. Por favor verifique as opções de microfone!
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
