--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2=și
 SONG_MENU_NAME_MAIN=Meniu cântece
 SONG_MENU_PLAY=Cântă
 SONG_MENU_CHANGEPLAYERS=Schimbă jucători
-SONG_MENU_CANCEL=Renunță
 
 SONG_MENU_NAME_PLAYLIST=Meniu cântece
 SONG_MENU_PLAYLIST_ADD=Adaugă cântec
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Nu pot încărca cântecul: Nu sunt pauze de linie
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Imposibil de încărcat cântecul: Eroare în analiza liniei %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Jucătorului %d i s-au atribuit mai multe microfoane. Verifică opţiunile de microfon.
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Jucătorului %d nu i s-a atribuit nici un microfon. Verifică opţiunile de microfon.
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
