--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= a
 SONG_MENU_NAME_MAIN=Výber hudby
 SONG_MENU_PLAY=Štart
 SONG_MENU_CHANGEPLAYERS=Iný hráč
-SONG_MENU_CANCEL=Zrušiť
 
 SONG_MENU_NAME_PLAYLIST=Skladby
 SONG_MENU_PLAYLIST_ADD=Pridať skladbu
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG=Skladbu sa nepodarilo nahrať.
 ;TODO: ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song could not be loaded: Error parsing line %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Hráč %d má priradených viac mikrofónov. Skontrolujte možnosti mikrofónu
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Hráč %d nemá priradený mikrofón. Skontrolujte možnosti mikrofónu
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
