--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= in
 SONG_MENU_NAME_MAIN=Meni pesmi
 SONG_MENU_PLAY=Poj
 SONG_MENU_CHANGEPLAYERS=Spremeni igralca
-SONG_MENU_CANCEL=Preklici
 
 SONG_MENU_NAME_PLAYLIST=Meni Pesem
 SONG_MENU_PLAYLIST_ADD=Dodaj pesem
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Ne morem naložiti pesmi: Ne najdem prelomov vrstic
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Ne morem naložiti pesmi: Napaka v parsanju vrstice %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Igralec %d je dodeljena več mikrofonom. Preverite možnosti mikrofona
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Igralec %d ni dodeljen mikrofonu. Preverite možnosti mikrofona
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
