--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= ja
 SONG_MENU_NAME_MAIN=Kappalevalikko
 SONG_MENU_PLAY=Laula
 SONG_MENU_CHANGEPLAYERS=Vaihda pelinimeä
-SONG_MENU_CANCEL=Peruuta
 
 SONG_MENU_NAME_PLAYLIST=Kappalelistavalikko
 SONG_MENU_PLAYLIST_ADD=Lisää kappale
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Kappaletta ei voitu avata: Ei löytynyt yhtään ri
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Kappaletta ei voitu avata: Virhe jäsentäessä riviä %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Pelaaja %d is assigned to multiple microphones. Tarkista mikrofoniasetukset
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Pelaaja %d is not assigned to a microphones. Tarkista mikrofoniasetukset
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
