--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= och
 SONG_MENU_NAME_MAIN=Låtmeny
 SONG_MENU_PLAY=Sjung
 SONG_MENU_CHANGEPLAYERS=Ändra spelare
-SONG_MENU_CANCEL=Ångra
 
 SONG_MENU_NAME_PLAYLIST=Låtmeny
 SONG_MENU_PLAYLIST_ADD=Lägg till låt
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Låten kunde inte laddas: Kan inte hitta radbrytnin
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Låten kunde inte laddas: Fel på rad %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Spelare %d är tilldelad flera mikrofoner. Kontrollera dina mikrofonalternativ
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Spelare %d är inte tilldelad en mikrofon. Kontrollera dina mikrofonalternativ
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
