--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= og
 SONG_MENU_NAME_MAIN=Lagavalmynd
 SONG_MENU_PLAY=Syngja
 SONG_MENU_CHANGEPLAYERS=Breyta um leikmenn
-SONG_MENU_CANCEL=Hætta við
 
 SONG_MENU_NAME_PLAYLIST=Lagavalmynd
 SONG_MENU_PLAYLIST_ADD=Bæta við lagi
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Ekki var hægt að hlaða inn lagi: Finn engar lín
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Ekki var hægt að hlaða inn lagi: Villa við þáttun línu %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Leikmaður %d er úthlutað til margra hljóðnema. Athugaðu hljóðnemann valkosti þína
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Leikmaður %d er ekki úthlutað í hljóðnema. Athugaðu hljóðnemann valkosti þína
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
