--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= a
 SONG_MENU_NAME_MAIN=Menu skladby
 SONG_MENU_PLAY=Zpívat
 SONG_MENU_CHANGEPLAYERS=Změnit hráče
-SONG_MENU_CANCEL=Zrušit
 
 SONG_MENU_NAME_PLAYLIST=Menu skladeb
 SONG_MENU_PLAYLIST_ADD=Přidat skladbu
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Skladbu se nepodařilo načíst: Nenalezeny informa
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Skladbu se nepodařilo načíst: Chyba při zpracování řádku %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Hráč %d je přiřazen k vícero mikrofonům. Zkontrolujte možnosti mikrofonu
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Hráč %d není přiřazen k mikrofonu. Zkontrolujte možnosti mikrofonu
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
