--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= και
 SONG_MENU_NAME_MAIN=Μενού τραγουδιών
 SONG_MENU_PLAY=Τραγουδήστε
 SONG_MENU_CHANGEPLAYERS=Αλλάξτε παίχτες
-SONG_MENU_CANCEL=Ακύρωση
 
 SONG_MENU_NAME_PLAYLIST=Μενού τραγουδιού
 SONG_MENU_PLAYLIST_ADD=Πρόσθεσε τραγούδι
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=Το τραγούδι δεν ήταν δυνατό 
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Το τραγούδι δεν ήταν δυνατό να φορτώσει: Λάθος στην επικόληση της γραμμής %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Παίχτης %d έχει εκχωρηθεί σε πολλαπλά μικρόφωνα. Ελέγξτε τις επιλογές μικροφώνου σας
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Παίχτης %d δεν έχει αντιστοιχιστεί σε ένα μικρόφωνο. Ελέγξτε τις επιλογές μικροφώνου σας
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
