--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= i
 SONG_MENU_NAME_MAIN=Meni pesme
 SONG_MENU_PLAY=Pevaj
 SONG_MENU_CHANGEPLAYERS=Promeni Igrace
-SONG_MENU_CANCEL=Nazad
 
 SONG_MENU_NAME_PLAYLIST=Meni Pesme
 SONG_MENU_PLAYLIST_ADD=Dodaj Pesmu
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG=Pesma se ne moze ucitati.
 ;TODO: ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song could not be loaded: Error parsing line %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Играч %d додељује се вишеструким микрофонима. Проверите опције микрофона
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Играч %d није додељен микрофону. Проверите опције микрофона
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
