--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= 和
 SONG_MENU_NAME_MAIN=歌曲菜单
 SONG_MENU_PLAY=演唱
 SONG_MENU_CHANGEPLAYERS=变更玩家
-SONG_MENU_CANCEL=取消
 
 SONG_MENU_NAME_PLAYLIST=歌曲菜单
 SONG_MENU_PLAYLIST_ADD=添加歌曲
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG_NO_BREAKS=无法载入歌曲：找不到任何分秆
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=无法载入歌曲：行 %0:d 解析错误
 ERROR_PLAYER_DEVICE_ASSIGNMENT=玩家 %d 被指定给多个麦克风，请检查您的麦克风选项
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=玩家 %d 没有指定麦克风，请检查您的麦克风选项
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
