--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= og
 SONG_MENU_NAME_MAIN=Sang Menu
 SONG_MENU_PLAY=Syng
 SONG_MENU_CHANGEPLAYERS=Skift Spillere
-SONG_MENU_CANCEL=Annuller
 
 SONG_MENU_NAME_PLAYLIST=Sang Menu
 SONG_MENU_PLAYLIST_ADD=Tilføj Sang
@@ -610,3 +609,6 @@ ERROR_CORRUPT_SONG=Sangen kunne ikke hentes.
 ;TODO: ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song could not be loaded: Error parsing line %0:d
 ;TODO: ERROR_PLAYER_DEVICE_ASSIGNMENT=Player %d is assigned to multiple microphones. Please check your microphone options
 ;TODO: ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphone. Please check your microphone options
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
