--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -345,7 +345,6 @@ IMPLODE_GLUE2= e
 SONG_MENU_NAME_MAIN=Menú cancións
 SONG_MENU_PLAY=Cantar
 SONG_MENU_CHANGEPLAYERS=Elixir xogadores
-SONG_MENU_CANCEL=Anular
 
 SONG_MENU_NAME_PLAYLIST=Menú cancións
 SONG_MENU_PLAYLIST_ADD=Engadir canción
@@ -609,4 +608,7 @@ ERROR_CORRUPT_SONG_NO_NOTES=Imposible cargar a canción: Non se atopan as notas
 ERROR_CORRUPT_SONG_NO_BREAKS=Imposible cargar a canción: Non se atopan interrupcións de liña
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Imposible cargar a canción: Erro durante o parsing da liña %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Asignaronse máis dun micrófono ó xogador %d. Comproba as opcións de micrófonos.
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Ó xogador %d non se lle asignou ningún micrófono. Comproba as opcións de micrófonos.
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Ó xogador %d non se lle asignou ningún micrófono. Comproba as opcións de micrófonos.ç
+
+;COMMON TRANSLATIONS:
+;TODO: C_BACK=Back
