added update songs in song menu

--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -572,10 +572,10 @@ SONG_MENU_DELETE_SONG=Slet Sang
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
 ;TODO: WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: NAME_PLAYERS_COUNT=Number of Players
 ;TODO: NAME_CURRENT_PLAYER=Player
-
-;TODO: SING_SONGS_MYSCORES=My scores
 
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
@@ -611,4 +611,8 @@ ERROR_CORRUPT_SONG=Sangen kunne ikke hentes.
 ;TODO: ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphone. Please check your microphone options
 
 ;COMMON TRANSLATIONS:
+
 ;TODO: C_BACK=Back
+
+;TODO: SEARCH_NEW_SONGS=Search new songs
+
