--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -572,10 +572,10 @@ SONG_MENU_NAME_JUKEBOX=Jukebox Menü
 WEBSITE_EXIST_SONG=Dieser Song ist der folgenden Webseite zugeordnet: %0:s
 WEBSITE_NOT_EXIST_SONG=Dieser Song ist keiner Webseite zugeordnet!
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 NAME_PLAYERS_COUNT=Anzahl der Spieler
 NAME_CURRENT_PLAYER=Spieler
-
-;TODO: SING_SONGS_MYSCORES=My scores
 
 JUKEBOX_MODE=Jukebox Modus
 
@@ -611,4 +611,8 @@ ERROR_PLAYER_DEVICE_ASSIGNMENT=Mehrere Mikrofone für Spieler %d gewählt.\nÜbe
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Kein Mikrofon für Spieler %d gewählt.\nÜberprüfen Sie Ihre Mikrofonoptionen.
 
 ;COMMON TRANSLATIONS:
+
 ;TODO: C_BACK=Back
+
+;TODO: SEARCH_NEW_SONGS=Search new songs
+
