--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -611,4 +611,7 @@ ERROR_PLAYER_DEVICE_ASSIGNMENT=Player %d is assigned to multiple microphones. Pl
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphone. Please check your microphone options
 
 ;COMMON TRANSLATIONS:
+
 C_BACK=Back
+
+SEARCH_NEW_SONGS=Search new songs
