--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -572,10 +572,10 @@ SONG_MENU_NAME_JUKEBOX=Menú Jukebox
 WEBSITE_EXIST_SONG=La cancion pertenece al sitio: %0:s
 WEBSITE_NOT_EXIST_SONG=La canción no pertenece a ningún sitio
 
+SING_SONGS_MYSCORES=Mis puntuaciones
+
 NAME_PLAYERS_COUNT=Número de jugadores
 NAME_CURRENT_PLAYER=Jugador
-
-SING_SONGS_MYSCORES=Mis puntuaciones
 
 JUKEBOX_MODE=Modo reproductor
 
@@ -611,4 +611,7 @@ ERROR_PLAYER_DEVICE_ASSIGNMENT=Se han asignado más de 1 micrófono al jugador %
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Al jugador %d no se le ha asignado ningún micrófono. Comprueba las opciones de micrófonos
 
 ;COMMON TRANSLATIONS:
+
 C_BACK=Atrás
+
+SEARCH_NEW_SONGS=Buscar canciones nuevas
