--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -572,10 +572,10 @@ SONG_MENU_NAME_JUKEBOX=Clàr-taice inneil-chlàr
 WEBSITE_EXIST_SONG=Tha an t-òran a’ buntainn ris an làrach-lìn: %0:s
 WEBSITE_NOT_EXIST_SONG=Chan eil an t-òran a’ buntainn ri làrach-lìn sam bith!
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 NAME_PLAYERS_COUNT=Co mheud cluicheadair
 NAME_CURRENT_PLAYER=Cluicheadair
-
-;TODO: SING_SONGS_MYSCORES=My scores
 
 JUKEBOX_MODE=Modh an inneil-chlàr
 
@@ -611,4 +611,7 @@ ERROR_PLAYER_DEVICE_ASSIGNMENT=Chaidh iomadh micreofon a shònrachadh dha chluic
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Cha deach micreofon a shònrachadh dha chluicheadair %d. Thoir sùil air na roghainnean microfòn agad
 
 ;COMMON TRANSLATIONS:
+
 ;TODO: C_BACK=Back
+
+;TODO: SEARCH_NEW_SONGS=Search new songs
