--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -572,10 +572,10 @@ SONG_MENU_DELETE_SONG=Izbriši Pjesmu
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
 ;TODO: WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 NAME_PLAYERS_COUNT=Broj igrača
 NAME_CURRENT_PLAYER=Igrač
-
-;TODO: SING_SONGS_MYSCORES=My scores
 
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
@@ -611,4 +611,7 @@ ERROR_PLAYER_DEVICE_ASSIGNMENT=Igrač %d je dodijeljen više mikrofona. Provjeri
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Igrač %d nije dodijeljen mikrofonu. Provjerite opcije mikrofona
 
 ;COMMON TRANSLATIONS:
+
 ;TODO: C_BACK=Back
+
+;TODO: SEARCH_NEW_SONGS=Search new songs
