--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -572,10 +572,10 @@ SONG_MENU_NAME_JUKEBOX=Menu Jukebox
 WEBSITE_EXIST_SONG=La canzone appartiene al sito web: %0:s
 WEBSITE_NOT_EXIST_SONG=La canzone non appartiene a nessun sito web!
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 NAME_PLAYERS_COUNT=Numero di giocatori
 NAME_CURRENT_PLAYER=Giocatore
-
-;TODO: SING_SONGS_MYSCORES=My scores
 
 JUKEBOX_MODE=Modalità Jukebox
 
@@ -611,4 +611,7 @@ ERROR_PLAYER_DEVICE_ASSIGNMENT=Il giocatore %d è assegnato a più microfoni. Pe
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Il giocatore %d non è assegnato ad un microfono. Per favore, selezionare un canale nelle opzioni del microfono.
 
 ;COMMON TRANSLATIONS:
-;TODO: C_BACK=Back
+
+C_BACK=Indietro
+
+SEARCH_NEW_SONGS=Cerca nuove canzoni
