--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -572,10 +572,10 @@ SONG_MENU_SONG=Daina
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
 ;TODO: WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 NAME_PLAYERS_COUNT=Žaidėjų skaičius
 NAME_CURRENT_PLAYER=Žaidėjas
-
-;TODO: SING_SONGS_MYSCORES=My scores
 
 JUKEBOX_MODE=Jukebox režimas
 
@@ -611,4 +611,7 @@ ERROR_LOADING_SONGS=Wait for loading all the songs
 ;TODO: ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphone. Please check your microphone options
 
 ;COMMON TRANSLATIONS:
+
 ;TODO: C_BACK=Back
+
+;TODO: SEARCH_NEW_SONGS=Search new songs
