--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -572,10 +572,10 @@ SONG_MENU_START_5_MEDLEY=Zingen %0:d lied!
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
 ;TODO: WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 NAME_PLAYERS_COUNT=Aantal spelers
 NAME_CURRENT_PLAYER=Speler
-
-;TODO: SING_SONGS_MYSCORES=My scores
 
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
@@ -611,4 +611,7 @@ ERROR_PLAYER_DEVICE_ASSIGNMENT=Speler %d is toegewezen aan meerdere microfoons. 
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Speler %d is niet toegewezen aan een microfoon. Controleer uw microfoonopties
 
 ;COMMON TRANSLATIONS:
+
 ;TODO: C_BACK=Back
+
+;TODO: SEARCH_NEW_SONGS=Search new songs
