--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -572,10 +572,10 @@ SONG_MENU_NAME_JUKEBOX=Menu szafy grającej
 WEBSITE_EXIST_SONG=Piosenka należy do strony internetowej: %0:s
 WEBSITE_NOT_EXIST_SONG=Ta piosenka nie należy do żadnej strony internetowej!
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 NAME_PLAYERS_COUNT=Liczba graczy
 NAME_CURRENT_PLAYER=Gracz
-
-;TODO: SING_SONGS_MYSCORES=My scores
 
 JUKEBOX_MODE=Tryb szafy grającej
 
@@ -611,4 +611,7 @@ ERROR_PLAYER_DEVICE_ASSIGNMENT=Gracz %d został przypisany do wielu mikrofonów.
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Gracz %d nie ma przypisanego mikrofonu. Sprawdź ustawienia mikrofonów.
 
 ;COMMON TRANSLATIONS:
+
 ;TODO: C_BACK=Back
+
+;TODO: SEARCH_NEW_SONGS=Search new songs
