--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -572,10 +572,10 @@ SONG_MENU_NAME_JUKEBOX=Menu Jukebox
 WEBSITE_EXIST_SONG=A canção pertence ao website: %0:s
 WEBSITE_NOT_EXIST_SONG=A canção não pertence a nenhum website!
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 NAME_PLAYERS_COUNT=Nº de Jogadores
 NAME_CURRENT_PLAYER=Jogador
-
-;TODO: SING_SONGS_MYSCORES=My scores
 
 JUKEBOX_MODE=Modo Jukebox
 
@@ -611,4 +611,7 @@ ERROR_PLAYER_DEVICE_ASSIGNMENT=O Jogador %d está atribuído a vários microfone
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=O Jogador %d não está atribuído a nenhum microfone. Por favor verifique as opções de microfone!
 
 ;COMMON TRANSLATIONS:
+
 ;TODO: C_BACK=Back
+
+;TODO: SEARCH_NEW_SONGS=Search new songs
