--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -572,10 +572,10 @@ SONG_MENU_NAME_JUKEBOX=Menu Jukebox
 WEBSITE_EXIST_SONG=La chanson appartient au site : %0:s
 WEBSITE_NOT_EXIST_SONG=La chanson n'appartient à aucun site !
 
+SING_SONGS_MYSCORES=Mes scores
+
 NAME_PLAYERS_COUNT=Nombre de joueurs
 NAME_CURRENT_PLAYER=Joueur
-
-SING_SONGS_MYSCORES=Mes scores
 
 JUKEBOX_MODE=Mode Jukebox
 
@@ -611,4 +611,7 @@ ERROR_PLAYER_DEVICE_ASSIGNMENT=Plusieurs micros sont attribués au joueur %d. Me
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Aucun micro n'est attribué au joueur %d. Merci de vérifier vos options de microphone
 
 ;COMMON TRANSLATIONS:
+
 C_BACK=Avant
+
+SEARCH_NEW_SONGS=Rechercher de nouvelles chansons
