--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -572,10 +572,10 @@ SONG_MENU_DELETE_SONG=Lidd läschen
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
 ;TODO: WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: NAME_PLAYERS_COUNT=Number of Players
 ;TODO: NAME_CURRENT_PLAYER=Player
-
-;TODO: SING_SONGS_MYSCORES=My scores
 
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
@@ -610,6 +610,8 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Lidd gëtt net gelueden: Feeler beim Parze vu
 ERROR_PLAYER_DEVICE_ASSIGNMENT=De Spiller %d huet ze vill Mikroe gewielt. Iwwerpréift d'Opzeechnungsoptiounen.
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=De Spiller %d huet kee Mikro gewielt. Iwwerpréift d'Opzeechnungsoptiounen.
 
-
 ;COMMON TRANSLATIONS:
+
 ;TODO: C_BACK=Back
+
+;TODO: SEARCH_NEW_SONGS=Search new songs
