--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -572,10 +572,10 @@ SONG_MENU_NAME_JUKEBOX=Zenedoboz Menü
 WEBSITE_EXIST_SONG=A dal a weboldalhoz tartozik: %0:s
 WEBSITE_NOT_EXIST_SONG=A dal nem tartozik egyik weboldalhoz sem!
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 NAME_PLAYERS_COUNT=Játékosok száma
 NAME_CURRENT_PLAYER=Játékos
-
-;TODO: SING_SONGS_MYSCORES=My scores
 
 JUKEBOX_MODE=Zenedoboz Mód
 
@@ -611,4 +611,8 @@ ERROR_PLAYER_DEVICE_ASSIGNMENT=Játékos %d több mikrofonhoz van rendelve. Kér
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Játékos %d nincs egy mikrofonhoz sem rendelve. Kérlek ellenőrizd a mikrofon beállításokat.
 
 ;COMMON TRANSLATIONS:
+
 ;TODO: C_BACK=Back
+
+;TODO: SEARCH_NEW_SONGS=Search new songs
+
