--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -572,10 +572,10 @@ SONG_MENU_SORTING_APPLY=Použiť
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
 ;TODO: WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 NAME_PLAYERS_COUNT=Počet hráčov
 NAME_CURRENT_PLAYER=Hráč
-
-;TODO: SING_SONGS_MYSCORES=My scores
 
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
@@ -611,4 +611,7 @@ ERROR_PLAYER_DEVICE_ASSIGNMENT=Hráč %d má priradených viac mikrofónov. Skon
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Hráč %d nemá priradený mikrofón. Skontrolujte možnosti mikrofónu
 
 ;COMMON TRANSLATIONS:
+
 ;TODO: C_BACK=Back
+
+;TODO: SEARCH_NEW_SONGS=Search new songs
