--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -572,10 +572,10 @@ SONG_MENU_DELETE_SONG=Odebrat skladbu
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
 ;TODO: WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: NAME_PLAYERS_COUNT=Number of Players
 ;TODO: NAME_CURRENT_PLAYER=Player
-
-;TODO: SING_SONGS_MYSCORES=My scores
 
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
@@ -611,4 +611,7 @@ ERROR_PLAYER_DEVICE_ASSIGNMENT=Hráč %d je přiřazen k vícero mikrofonům. Zk
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Hráč %d není přiřazen k mikrofonu. Zkontrolujte možnosti mikrofonu
 
 ;COMMON TRANSLATIONS:
+
 ;TODO: C_BACK=Back
+
+;TODO: SEARCH_NEW_SONGS=Search new songs
