--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -572,10 +572,10 @@ SONG_MENU_DELETE_SONG=删除歌曲
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
 ;TODO: WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: NAME_PLAYERS_COUNT=Number of Players
 ;TODO: NAME_CURRENT_PLAYER=Player
-
-;TODO: SING_SONGS_MYSCORES=My scores
 
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
@@ -611,4 +611,7 @@ ERROR_PLAYER_DEVICE_ASSIGNMENT=玩家 %d 被指定给多个麦克风，请检查
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=玩家 %d 没有指定麦克风，请检查您的麦克风选项
 
 ;COMMON TRANSLATIONS:
+
 ;TODO: C_BACK=Back
+
+;TODO: SEARCH_NEW_SONGS=Search new songs
